[gd_scene load_steps=5 format=3 uid="uid://ck5c6cxcbt82l"]

[ext_resource type="Script" path="res://script/end_UI.gd" id="1_6djsf"]
[ext_resource type="Texture2D" uid="uid://d3hocn48vommb" path="res://assets/menu.png" id="2_egtts"]
[ext_resource type="Texture2D" uid="uid://bi0ucuo5iqrog" path="res://assets/Button25.png" id="3_24q1w"]
[ext_resource type="Texture2D" uid="uid://bvp5t45hhwmt8" path="res://assets/Button18.png" id="4_smxj8"]

[node name="end_UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6djsf")

[node name="end_of_game_screen" type="Node2D" parent="."]
position = Vector2(578, 306)

[node name="Menu" type="Sprite2D" parent="end_of_game_screen"]
position = Vector2(1, 1)
scale = Vector2(11.4583, 12.875)
texture = ExtResource("2_egtts")

[node name="quit_button" type="Button" parent="end_of_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -87.0
offset_top = 9.0
offset_right = 118.0
offset_bottom = 46.0

[node name="quit" type="Sprite2D" parent="end_of_game_screen/quit_button"]
position = Vector2(104.5, 17.5)
scale = Vector2(1.44118, 0.747126)
texture = ExtResource("3_24q1w")

[node name="Label_quit" type="Label" parent="end_of_game_screen/quit_button"]
offset_left = 69.0
offset_top = -3.0
offset_right = 120.0
offset_bottom = 26.0
scale = Vector2(1.565, 1.565)
text = "Quit"

[node name="restart_button" type="Button" parent="end_of_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -137.0
offset_top = 37.25
offset_right = -58.0
offset_bottom = 56.25
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="end_of_game_screen"]
modulate = Color(0, 0, 0, 1)
offset_left = -154.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = -22.0
scale = Vector2(2.625, 2.625)
text = "Level completed!!"

[node name="quit_button2" type="Button" parent="end_of_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -105.0
offset_top = 59.0
offset_right = 100.0
offset_bottom = 96.0
scale = Vector2(1.2, 1)

[node name="restart" type="Sprite2D" parent="end_of_game_screen/quit_button2"]
position = Vector2(99.1667, 17)
scale = Vector2(1.12, 0.890804)
texture = ExtResource("4_smxj8")

[node name="Label_restart" type="Label" parent="end_of_game_screen/quit_button2"]
offset_top = -3.0
offset_right = 122.0
offset_bottom = 49.0
scale = Vector2(1.675, 1.675)
text = "Go to next level"

[connection signal="pressed" from="end_of_game_screen/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="end_of_game_screen/quit_button2" to="." method="_on_quit_button_2_pressed"]
